--- a/.github/workflows/build-and-deploy-multi-arch.yml
+++ b/.github/workflows/build-and-deploy-multi-arch.yml
@@ -2,14 +2,6 @@
 name: Build, Push, and Deploy Image
 
 on: push
-#  push:
-#    branches:
-#      - main
-#    tags:
-#      - v*
-
-permissions:
-  contents: read
 
 env:
   # Docker image tags. See https://github.com/docker/metadata-action for format
@@ -23,9 +15,9 @@ jobs:
     permissions:
       contents: read
       id-token: write
-
     outputs:
       images: ${{ steps.build.outputs.images }}
+      should-push: ${{ steps.setup.outputs.should-push }}
 
     strategy:
       fail-fast: false
@@ -38,8 +30,16 @@ jobs:
 
     runs-on: ${{ matrix.runnerType }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - name: Should we push?
+        id: setup
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/main" || "${GITHUB_REF}" == refs/tags/v* ]]; then
+            echo "should-push=true" | tee -a "$GITHUB_OUTPUT"
+          else
+            echo "should-push=false" | tee -a "$GITHUB_OUTPUT"
+          fi
+
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
 
@@ -49,9 +49,9 @@ jobs:
         with:
           registries: dockerhub
           platforms: ${{ matrix.platform }}
-          outputs: "type=image,push-by-digest=true,name-canonical=true,push=true"
-          push: true
-          tags: multi-arch-test
+          outputs: "type=image,push-by-digest=true,name-canonical=true,push=${{ steps.setup.outputs.should-push == 'true' }}"
+          push: ${{ steps.setup.outputs.should-push == 'true' }}
+          tags: ${{ env.TAGS_CONFIG }}
           include-tags-in-push: false
 
       - name: Export Docker Digest
@@ -72,5 +72,5 @@ jobs:
         uses: grafana/shared-workflows/actions/docker-import-digests-push-manifest@cd422befbbda65e0612a63627e8c8820d86bc2a6 # docker-import-digests-push-manifest/v0.1.0
         with:
           images: ${{ needs.build-and-export-digest.outputs.images }}
-          push: true
-          tags: multi-arch-test
+          push: ${{ needs.build-and-export-digest.outputs.should-push == 'true' }}
+          tags: ${{ env.TAGS_CONFIG }}
