--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,18 +1,9 @@
-# See https://docs.docker.com/build/ci/github-actions/multi-platform/
+# See https://docs.docker.com/build/ci/github-actions/multi-platform/#distribute-build-across-multiple-runners
 name: Build, Push, and Deploy Image
 
-on:
-  push:
-    branches:
-      - main
-    tags:
-      - v*
-
-permissions:
-  contents: read
+on: push
 
 env:
-  REGISTRY_IMAGE: grafana/cloudcost-exporter
   # Docker image tags. See https://github.com/docker/metadata-action for format
   TAGS_CONFIG: |
     type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
@@ -20,31 +11,75 @@ env:
     type=semver,pattern=v{{ version }}
 
 jobs:
-  build:
-    name: Build and Push Image
-    runs-on: ubuntu-latest
+  build-and-export-digest:
     permissions:
       contents: read
       id-token: write
+    outputs:
+      images: ${{ steps.build.outputs.images }}
+      should-push: ${{ steps.setup.outputs.should-push }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - runnerType: ubuntu-24.04-arm
+            platform: linux/arm64
+          - runnerType: ubuntu-24.04
+            platform: linux/amd64
+
+    runs-on: ${{ matrix.runnerType }}
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
 
+      - name: Should we push?
+        id: setup
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/main" || "${GITHUB_REF}" == refs/tags/v* ]]; then
+            echo "should-push=true" | tee -a "$GITHUB_OUTPUT"
+          else
+            echo "should-push=false" | tee -a "$GITHUB_OUTPUT"
+          fi
+
       - name: Build and Push Image
-        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@06f8765f6a5043b01e5a3dddd78a71741552add7 # build-push-to-dockerhub/v0.3.0
+        id: build
+        uses: grafana/shared-workflows/actions/docker-build-push-image@7a256e98018aba3d01643479808a7690179a1f1c # docker-build-push-image/v0.1.1
         with:
-          repository: ${{ env.REGISTRY_IMAGE }}
-          context: .
-          push: true
-          platforms: linux/amd64,linux/arm64
+          registries: dockerhub
+          platforms: ${{ matrix.platform }}
+          outputs: "type=image,push-by-digest=true,name-canonical=true,push=${{ steps.setup.outputs.should-push == 'true' }}"
+          push: ${{ steps.setup.outputs.should-push == 'true' }}
+          tags: ${{ env.TAGS_CONFIG }}
+          include-tags-in-push: false
+
+      - name: Export Docker Digest
+        id: export
+        uses: grafana/shared-workflows/actions/docker-export-digest@9901fa1e9c9cd7e78bb556c0ff4339932837082e # docker-export-digest/v0.1.0
+        with:
+          digest: ${{ steps.build.outputs.digest }}
+          platform: ${{ matrix.platform }}
+
+  push-manifest:
+    runs-on: ubuntu-24.04
+    needs: build-and-export-digest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - name: Download Multi-Arch Digests, Construct and Upload Manifest
+        uses: grafana/shared-workflows/actions/docker-import-digests-push-manifest@cd422befbbda65e0612a63627e8c8820d86bc2a6 # docker-import-digests-push-manifest/v0.1.0
+        with:
+          images: ${{ needs.build-and-export-digest.outputs.images }}
+          push: ${{ needs.build-and-export-digest.outputs.should-push == 'true' }}
           tags: ${{ env.TAGS_CONFIG }}
 
   deploy:
     name: Trigger Argo Workflow Deployment
-    runs-on: ubuntu-latest
-    needs: build
+    runs-on: ubuntu-24.04
+    needs: push-manifest
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: read
