--- a/.github/workflows/release-on-pr-merge.yml
+++ b/.github/workflows/release-on-pr-merge.yml
@@ -2,12 +2,12 @@ name: PR Merge to Main
 
 on:
   pull_request:
-    types: [closed]
+    types: [opened]
     branches:
       - main
 
 permissions:
-  contents: write
+  contents: read
   pull-requests: read
 
 jobs:
@@ -17,6 +17,12 @@ jobs:
       should-release: ${{ steps.check.outputs.should-release }}
       bump: ${{ steps.check.outputs.bump }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+
       - name: Get PR information
         id: check
         run: |
@@ -123,7 +129,7 @@ jobs:
           
           git tag -a "$TAG" -m "Release $TAG
 
-          Merged from PR #$PR_NUMBER: $PR_TITLE
+          From PR #$PR_NUMBER: $PR_TITLE
           
           See: $PR_URL"
           
@@ -205,17 +211,26 @@ jobs:
       contents: read
       id-token: write
     steps:
-      - name: Download Multi-Arch Digests, Construct and Upload Manifest
+      - name: Download Multi-Arch Digests, Construct and Upload Manifest (Release)
+        if: needs.tag-and-goreleaser.outputs.should-release == 'true'
         uses: grafana/shared-workflows/actions/docker-import-digests-push-manifest@c7c3322b5815fd007586605e0ea286969f6aeae2 # docker-import-digests-push-manifest/v0.1.1
         with:
           images: ${{ needs.build-and-export-digest.outputs.images }}
           push: true
           tags: |
-            type=semver,pattern=v{{ version }},enable=${{ needs.tag-and-goreleaser.outputs.should-release == 'true' }}
-            type=raw,value=latest,enable=${{ needs.tag-and-goreleaser.outputs.should-release == 'false' }}
-            type=sha,prefix=main-,format=short,enable=${{ needs.tag-and-goreleaser.outputs.should-release == 'false' }}
+            type=semver,pattern=v{{ version }}
         env:
-          version: ${{ needs.tag-and-goreleaser.outputs.should-release == 'true' && needs.tag-and-goreleaser.outputs.version || '0.0.0' }}
+          version: ${{ needs.tag-and-goreleaser.outputs.version }}
+
+      - name: Download Multi-Arch Digests, Construct and Upload Manifest (Non-Release)
+        if: needs.tag-and-goreleaser.outputs.should-release != 'true'
+        uses: grafana/shared-workflows/actions/docker-import-digests-push-manifest@c7c3322b5815fd007586605e0ea286969f6aeae2 # docker-import-digests-push-manifest/v0.1.1
+        with:
+          images: ${{ needs.build-and-export-digest.outputs.images }}
+          push: true
+          tags: |
+            type=raw,value=latest
+            type=sha,prefix=main-,format=short
 
   deploy:
     if: needs.tag-and-goreleaser.outputs.should-release == 'true'
