--- a/.github/workflows/release-on-tag-push.yml
+++ b/.github/workflows/release-on-tag-push.yml
@@ -1,24 +1,55 @@
-# See https://docs.docker.com/build/ci/github-actions/multi-platform/#distribute-build-across-multiple-runners
-name: Build, Push, and Deploy Image
+name: Release on Tag Push
 
-on: push
+on:
+  push:
+    tags:
+      - v*
 
-env:
-  # Docker image tags. See https://github.com/docker/metadata-action for format
-  TAGS_CONFIG: |
-    type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-    type=sha,prefix={{ branch }}-,format=short,enable=${{ github.ref == 'refs/heads/main' }}
-    type=semver,pattern=v{{ version }}
+permissions:
+  contents: read
 
 jobs:
+  tag-and-goreleaser:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+
+      - name: Extract version
+        id: version
+        run: |
+          VERSION="${GITHUB_REF#refs/tags/}"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Using pushed tag: $VERSION"
+
+      - name: Set up Go
+        uses: actions/setup-go@7a3fe6cf4cb3a834922a1244abfce67bcef6a0c5 # v6.2.0
+        with:
+          cache: false
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
+        with:
+          distribution: goreleaser
+          version: 2
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build-and-export-digest:
+    needs: tag-and-goreleaser
     permissions:
       contents: read
       id-token: write
     outputs:
       images: ${{ steps.build.outputs.images }}
-      should-push: ${{ steps.setup.outputs.should-push }}
-
     strategy:
       fail-fast: false
       matrix:
@@ -27,22 +58,14 @@ jobs:
             platform: linux/arm64
           - runnerType: ubuntu-24.04
             platform: linux/amd64
-
     runs-on: ${{ matrix.runnerType }}
     steps:
       - name: Checkout
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
         with:
           persist-credentials: false
-
-      - name: Should we push?
-        id: setup
-        run: |
-          if [[ "${GITHUB_REF}" == "refs/heads/main" || "${GITHUB_REF}" == refs/tags/v* ]]; then
-            echo "should-push=true" | tee -a "$GITHUB_OUTPUT"
-          else
-            echo "should-push=false" | tee -a "$GITHUB_OUTPUT"
-          fi
+          ref: ${{ needs.tag-and-goreleaser.outputs.version }}
+          fetch-depth: 0
 
       - name: Build and Push Image
         id: build
@@ -50,10 +73,13 @@ jobs:
         with:
           registries: dockerhub
           platforms: ${{ matrix.platform }}
-          outputs: "type=image,push-by-digest=true,name-canonical=true,push=${{ steps.setup.outputs.should-push == 'true' }}"
-          push: ${{ steps.setup.outputs.should-push == 'true' }}
-          tags: ${{ env.TAGS_CONFIG }}
+          outputs: "type=image,push-by-digest=true,name-canonical=true,push=true"
+          push: true
+          tags: |
+            type=semver,pattern=v{{ version }}
           include-tags-in-push: false
+        env:
+          version: ${{ needs.tag-and-goreleaser.outputs.version }}
 
       - name: Export Docker Digest
         id: export
@@ -63,8 +89,8 @@ jobs:
           platform: ${{ matrix.platform }}
 
   push-manifest:
+    needs: [tag-and-goreleaser, build-and-export-digest]
     runs-on: ubuntu-24.04
-    needs: build-and-export-digest
     permissions:
       contents: read
       id-token: write
@@ -73,36 +99,27 @@ jobs:
         uses: grafana/shared-workflows/actions/docker-import-digests-push-manifest@c7c3322b5815fd007586605e0ea286969f6aeae2 # docker-import-digests-push-manifest/v0.1.1
         with:
           images: ${{ needs.build-and-export-digest.outputs.images }}
-          push: ${{ needs.build-and-export-digest.outputs.should-push == 'true' }}
-          tags: ${{ env.TAGS_CONFIG }}
+          push: true
+          tags: |
+            type=semver,pattern=v{{ version }}
+        env:
+          version: ${{ needs.tag-and-goreleaser.outputs.version }}
 
   deploy:
-    name: Trigger Argo Workflow Deployment
+    needs: [tag-and-goreleaser, push-manifest]
     runs-on: ubuntu-24.04
-    needs: push-manifest
-    if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: read
       id-token: write
       pull-requests: write
-
     steps:
-      - name: Extract version
-        id: version
-        run: |
-          VERSION="${GITHUB_REF#refs/tags/}"
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
-          echo "Deploying version: ${VERSION}"
-          echo "Docker image: grafana/cloudcost-exporter:${VERSION}"
-
       - name: Trigger Argo Workflow
-        id: trigger-argo-workflow
         uses: grafana/shared-workflows/actions/trigger-argo-workflow@e100806688f1209051080dfea5719fbbd1d18cc0 # trigger-argo-workflow/v1.2.1
         with:
           namespace: platform-monitoring-cd
           workflow_template: cloudcost-exporter
           parameters: |
             imageName=grafana/cloudcost-exporter
-            dockertag=${{ steps.version.outputs.version }}
-            prCommentContext= Triggered by release ${{ steps.version.outputs.version }} in grafana/cloudcost-exporter
+            dockertag=${{ needs.tag-and-goreleaser.outputs.version }}
+            prCommentContext= Triggered by release ${{ needs.tag-and-goreleaser.outputs.version }} in grafana/cloudcost-exporter
             commit_author=grafana-delivery-bot
