--- a/.github/workflows/release-helm-chart.yaml
+++ b/.github/workflows/release-helm-chart.yaml
@@ -10,7 +10,32 @@ env:
 permissions: {}
 
 jobs:
+  validate-chart:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+
+      - name: Set up Helm
+        uses: azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4  # v4.3.1
+        with:
+          version: 'v3.14.0'
+
+      - name: Lint Helm chart
+        run: |
+          helm lint charts/cloudcost-exporter
+
+      - name: Template Helm chart with default values
+        run: |
+          helm template cloudcost-exporter charts/cloudcost-exporter
+
+      - name: Template Helm chart with AWS values
+        run: |
+          helm template cloudcost-exporter charts/cloudcost-exporter \
+            -f charts/cloudcost-exporter/values.aws.yaml
+
   release-chart:
+    needs: validate-chart
     uses: grafana/helm-charts/.github/workflows/update-helm-repo.yaml@e5ee6963cce3ab19519dc6dbd5f250aa14dc6f12
     permissions:
       contents: write
