Trigger Helm chart release from changes to Chart.yaml

--- a/.github/workflows/release-helm-chart.yaml
+++ b/.github/workflows/release-helm-chart.yaml
@@ -1,5 +1,10 @@
 name: Release Helm Chart
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'charts/cloudcost-exporter/Chart.yaml'
   workflow_dispatch:
 
 env:
