--- a/charts/cloudcost-exporter/templates/deployment.yaml
+++ b/charts/cloudcost-exporter/templates/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       serviceAccountName: {{ include "cloudcost-exporter.serviceAccountName" . }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default (printf "v%s" .Chart.AppVersion) }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
           {{- range .Values.containerArgs }}
