--- a/cr.yaml
+++ b/cr.yaml
@@ -3,3 +3,4 @@ owner: grafana
 git-repo: helm-charts
 skip-existing: true
 release-name-template: "{{ .Name }}-{{ .Version }}"
+git-tag-template: "{{ .Name }}-{{ .Version }}"
